# backend/app/Models/Reserve.php
@@ -2,17 +2,22 @@
 
 namespace App\Models;
 
-class Reserve
+use Illuminate\Database\Eloquent\Concerns\HasUlids;
+use Illuminate\Database\Eloquent\Model;
+
+class Reserve extends Model
 {
+    use HasUlids;
+
     protected $fillable = [
         'golf_course_id',
-        'start_at',
+        'start_date',
         'name',
         'email',
         'person_count',
     ];
 
     protected $casts = [
-        'start_at' => 'datetime',
+        'start_date' => 'datetime',
     ];
 }
